rm: jvm args, chore: upgrade lein in travis ci config